# tcp_project

./: .gitignore  CMakeLists.txt  README.md
gui_client/: CMakeLists.txt
gui_client/src/: api_client.cpp  api_client.h  mainwindow.cpp  mainwindow.h  server_settings_dialog.cpp  server_settings_dialog.h  tab.cpp  tab.h
logger/: CMakeLists.txt  logger.cpp  logger.h
tcp_client_asio/: CMakeLists.txt  README.md  main.cpp  request.cpp  request.h  tcp_client.cpp  tcp_client.h  ui_cli_client.cpp  ui_cli_client.h  user_client.cpp  user_client.h
tcp_server_asio/: CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  protocol.cpp  protocol.h  requestprotocol.cpp  requestprotocol.h  tcp_server.cpp  tcp_server.h  types.h
